--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,8 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# Generated analysis files (AI-powered data analysis feature)
+/generated-analysis
+*.ipynb
+*.csv
