--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "@faker-js/faker": "^10.1.0",
     "@modelcontextprotocol/sdk": "^1.20.1",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "axios": "^1.12.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "csv-writer": "^1.6.0",
+    "openai": "^6.5.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
